<resources>
    <string name="app_name">Mint</string>
    <string name="login_success_text">You has been signed in</string>
    <string name="login_failed_text">User name or password is incorrect</string>
    <string name="login">Login</string>
    <string name="signInButton">Sign In</string>
    <string name="signUpButton">Sign Up</string>
    <string name="passwordText">Password</string>
    <string name="repeatPasswordText">Repeat Password</string>
    <string name="settingsName">mysettings</string>
    <string name="toast_regiter_alerady">You have not been registered already</string>
    <string name="toast_incorrect_password">Incorrect login or password</string>
    <string name="search">search</string>
    <string name="enter_new_fruit_name">Enter new fruit name</string>
    <string name="add_newFruit_text_button">Add</string>
    <string name="enter_fruit_name">Enter fruit name</string>
    <string name="edit_fruit_text_button">Edit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
