<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.plishkin.alex.mint.SignUpActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/sign_up_login"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:hint="@string/login"/>

        <TextView
            android:text="@string/passwordText"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginBottom="10dp"
            android:textAlignment="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/sign_up_password"
            android:textAlignment="center"
            android:layout_marginBottom="10dp" />

        <TextView
            android:text="@string/repeatPasswordText"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_marginBottom="10dp"
            android:textAlignment="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/sign_up_repeat_password"
            android:textAlignment="center"
            android:layout_marginBottom="10dp" />

        <Button
            android:text="@string/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_send"
            android:background="@color/backgroundSignInButton" />
    </LinearLayout>
</RelativeLayout>
