<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.plishkin.alex.mint.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:hint="@string/login"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:layout_marginBottom="10dp"
            android:textAlignment="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="46dp">

            <Button
                android:text="@string/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_sign_in"
                android:background="@color/backgroundSignInButton"
                android:layout_weight="1"
                android:layout_marginRight="5dp" />

            <Button
                android:text="@string/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_sign_up"
                android:background="@color/backgroundSignUpButton"
                android:layout_weight="1"
                android:layout_marginLeft="5dp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
